--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
-    "open-graph-scraper": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rss-parser": "^3.13.0",
-    "typescript": "5.0.3",
-    "xml-js": "^1.6.11"
+    "typescript": "5.0.3"
   },
   "devDependencies": {
     "sass": "^1.62.0"
