--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-masonry": "^2.1.7",
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/react-responsive-masonry": "^2.1.0",
     "sass": "^1.62.0"
   }
 }
